Fix checkbox color in dark mode.

--- a/todo_list/static/todo_list/css/checkbox.css
+++ b/todo_list/static/todo_list/css/checkbox.css
@@ -2,7 +2,7 @@
     width: 25px;
     height: 25px;
     background: var(--paper-white);
-    border: 2px solid black;
+    border: 2px solid var(--font-color);
     display: inline-block;
     margin: 0px 5px 0 0;
     font-family: 'Marck Script', 'cursive';
